# naive_poem_rev

./: .gitignore  TangShi.json  pyproject.toml  readme.md  search_poem.py
src/: search_poem.py
src/db/: duckdb_manager.py
src/models/: rerank.py
src/utils/: tools.py
