[project]
name = "naive-poem-rev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "datasets>=3.3.2",
    "duckdb>=1.2.0",
    "flagembedding>=1.3.4",
    "loguru>=0.7.3",
    "openai>=1.65.1",
    "peft>=0.14.0",
    "pymilvus[model]>=2.5.4",
]
